# advent2019

./: Cargo.toml  README.md
advent2019/: Cargo.toml
advent2019/src/: main.rs
common/: Cargo.toml
common/src/: area.rs  common_error.rs  convert.rs  direction.rs  error.rs  file.rs  lib.rs  macros.rs  math.rs  pos.rs  turn.rs
computer/: Cargo.toml
computer/src/: code.rs  common.rs  computer.rs  computer_error.rs  cpu.rs  cpu_wrapper.rs  error.rs  input.rs  input_converter.rs  lib.rs  list_input.rs  modes.rs  output.rs  text_input.rs  text_output.rs  text_vm.rs  virtual_machine.rs  vm.rs
data/day06/: example2.txt
data/day18/: example6.txt
day01/: Cargo.toml
day01/src/: lib.rs
day02/: Cargo.toml
day02/src/: error.rs  lib.rs  simple.rs
day03/: Cargo.toml
day03/src/: error.rs  lib.rs  pos.rs  section.rs  wire.rs  wire_error.rs
day04/: Cargo.toml
day04/src/: better_password.rs  error.rs  lib.rs  password.rs
day05/: Cargo.toml
day05/src/: lib.rs
day06/: Cargo.toml
day06/src/: error.rs  lib.rs  orbit_error.rs  orbits.rs
day07/: Cargo.toml
day07/src/: amplifier.rs  error.rs  lib.rs  (+1 more)
day08/: Cargo.toml
day09/: Cargo.toml
day10/: Cargo.toml
day11/: Cargo.toml
day11/src/: error.rs  interface.rs  lib.rs  paint_bot.rs
day12/: Cargo.toml
day13/: Cargo.toml
day14/: Cargo.toml
day15/: Cargo.toml
day16/: Cargo.toml
day17/: Cargo.toml
day18/: Cargo.toml
day19/: Cargo.toml
day20/: Cargo.toml
day21/: Cargo.toml
day22/: Cargo.toml
day23/: Cargo.toml
day24/: Cargo.toml
day25/: Cargo.toml
src/: main.rs
(+196 files in other folders)
